--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Jing Xuan's ASG1</title>
       <link rel="stylesheet" href="styles.css" type="text/css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script type="text/javascript" src="Scripts/header.js" defer></script>
+      <script type="text/javascript" src="Scripts/scroll.js" defer></script>
     </head>
 
     <body style="height:5000px">
@@ -17,5 +17,35 @@
         <a class="navitem" href="">Item 4</a>
         <a class="navitem" href="">Item 5</a>
     </section>
+
+    <section id="banner">
+      <div class="banner-text">
+        Amogus Translations
+      </div>
+    </section>
+
+    <section id="team-info">
+      <div class="team-info-container">
+        
+        <div class="team-info-logo">
+          <img src="Media/Amogus.jpg" alt="Amogus logo">
+        </div>
+
+        <div class="team-info-text">
+          <h1>Team Amogus</h1>
+          <p>
+            We are a team of LoveLive! Sunshine fans with the goal of
+            translating content to reach the worldwide audience!
+            <br>
+            We also aim to provide the latest news about LoveLive! franchise.
+          </p>
+          <div>
+            <a href="#">About the Team</a>
+          </div>
+
+        </div> 
+      </div>
+    </section>
+
     </body>
 </html>
