--- a/index.html
+++ b/index.html
@@ -47,5 +47,24 @@
       </div>
     </section>
 
+    <section id="newsfeed">
+      <div class="newsfeed-container">
+
+        <div class="newsfeed-section">a
+        </div>
+
+        <div class="newsfeed-section">b
+
+        </div>
+
+        <div class="newsfeed-section">c
+
+        </div>
+        
+
+      </div>
+    </section>
+
+
     </body>
 </html>
