--- a/index.html
+++ b/index.html
@@ -1,34 +1,31 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-      <title>Jing Xuan's ASG1</title>
-      <link rel="stylesheet" href="styles.css" type="text/css">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script type="text/javascript" src="Scripts/scroll.js" defer></script>
-    </head>
+  <head>
+    <title>Jing Xuan's ASG1</title>
+    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="text/javascript" src="Scripts/scroll.js" defer></script>
+  </head>
 
-    <body style="height:5000px">
-      <section id="header">
-        <!-- <a class="bigbutton" href="">Hello</a> -->
-        <a class="navitem" href="">Item 1</a>
-        <a class="navitem" href="">Item 2</a>
-        <a class="navitem" href="">Item 3</a>
-        <a class="navitem" href="">Item 4</a>
-        <a class="navitem" href="">Item 5</a>
-      </section>
+  <body style="height: 5000px">
+    <section id="header">
+      <!-- <a class="bigbutton" href="">Hello</a> -->
+      <a class="navitem" href="index.html">Home</a>
+      <a class="navitem" href="members.html">Members</a>
+      <a class="navitem" href="">Item 3</a>
+      <a class="navitem" href="">Item 4</a>
+      <a class="navitem" href="">Item 5</a>
+    </section>
 
     <section id="banner">
-      <div class="banner-text">
-        Amogus Translations
-      </div>
+      <div class="banner-text">Amogus Translations</div>
     </section>
 
     <section id="team-info">
       <div class="team-info-container">
-        
         <div class="team-info-logo">
-          <img src="Media/Amogus.jpg" alt="Amogus logo">
+          <img src="Media/Amogus.jpg" alt="Amogus logo" />
         </div>
 
         <div class="team-info-text">
@@ -36,35 +33,24 @@
           <p>
             We are a team of LoveLive! Sunshine fans with the goal of
             translating content to reach the worldwide audience!
-            <br>
+            <br />
             We also aim to provide the latest news about LoveLive! franchise.
           </p>
           <div>
             <a href="#">About the Team</a>
           </div>
-
-        </div> 
+        </div>
       </div>
     </section>
 
     <section id="newsfeed">
       <div class="newsfeed-container">
+        <div class="newsfeed-section">a</div>
 
-        <div class="newsfeed-section">a
-        </div>
+        <div class="newsfeed-section">b</div>
 
-        <div class="newsfeed-section">b
-
-        </div>
-
-        <div class="newsfeed-section">c
-
-        </div>
-        
-
+        <div class="newsfeed-section">c</div>
       </div>
     </section>
-
-
-    </body>
+  </body>
 </html>
