--- a/members.html
+++ b/members.html
@@ -11,8 +11,8 @@
   <body style="height:5000px">
     <section id="header">
       <!-- <a class="bigbutton" href="">Hello</a> -->
-      <a class="navitem" href="">Item 1</a>
-      <a class="navitem" href="">Item 2</a>
+      <a class="navitem" href="index.html">Home</a>
+      <a class="navitem" href="members.html">Members</a>
       <a class="navitem" href="">Item 3</a>
       <a class="navitem" href="">Item 4</a>
       <a class="navitem" href="">Item 5</a>
