added mainbody, no styles/scripts

--- a/members.html
+++ b/members.html
@@ -41,6 +41,76 @@
       </div>
     </section>
 
+    <section id="members">
+
+      <div id="scroll-buttons">
+        <div id="scroll-buttons-container">
+          <img id="prev-button" src="Media/left-arrow.png">
+          <img id="next-button" src="Media/right-arrow.png">
+        </div>
+      </div>
+
+      <div id ="slides">
+        <div class="slide">
+          <div class="member-container">
+            <div class="member-inner-container">
+
+              <div class="member-container-image">
+                <img id="0_image" src="Media/aqoursclub_cast_1.png" alt="Member 1">
+              </div>
+
+              <div class="member-container-bio">
+                <h1 id="0_name" class="member-name">a</h1>
+                <p  id="0_birthday" class="member-birthday">A</p>
+                <p  id="0_biography" class="member-biography">2</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        
+        <div class="slide">
+          <div class="member-container">
+            <div class="member-inner-container">
+              <div class="member-container-image">
+                <img id="1_image" src="Media/aqoursclub_cast_2.png" alt="Member 2">
+              </div>
+
+              <div class="member-container-bio">
+                <h1 id="1_name" class="member-name">a</h1>
+                <p id="1_birthday" class="member-birthday">A</p>
+                <p id="1_biography" class="member-biography">2</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        
+        <div class="slide">
+          <div class="member-container">
+            <div class="member-inner-container">
+              <div class="member-container-image">
+                <img id="2_image" src="Media/aqoursclub_cast_3.png" alt="Member 3">
+              </div>
+
+              <div class="member-container-bio">
+                <h1 id="2_name" class="member-name">a</h1>
+                <p id="2_birthday" class="member-birthday">A</p>
+                <p id="2_biography" class="member-biography">2</p>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    <section id="buttons">
+      <button id="left-button"></button>
+      <button id="middle-button"></button>
+      <button id="right-button"></button>
+    </section>
+
 
   </body>
 </html>
