added posts.html/ changed scrollevent to jQuery

--- a/members.html
+++ b/members.html
@@ -14,7 +14,7 @@
       <!-- <a class="bigbutton" href="">Hello</a> -->
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
-      <a class="navitem" href="">Item 3</a>
+      <a class="navitem" href="posts.html">Posts</a>
       <a class="navitem" href="">Item 4</a>
       <a class="navitem" href="">Item 5</a>
     </section>
