--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <title>Jing Xuan's ASG1</title>
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
   </head>
 
   <body style="height: 5000px">
-    <section id="header">
+    <section id="header" class="canScroll">
       <!-- <a class="bigbutton" href="">Hello</a> -->
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
-      <a class="navitem" href="">Item 3</a>
+      <a class="navitem" href="posts.html">Posts</a>
       <a class="navitem" href="">Item 4</a>
       <a class="navitem" href="">Item 5</a>
     </section>
