solid nav bar on posts/members

--- a/members.html
+++ b/members.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
   </head>
 
-  <body  style="height:5000px; margin-top: 10vh;">
+  <body  style="height:5000px">
     <section id="header">
       <!-- <a class="bigbutton" href="">Hello</a> -->
       <a class="navitem" href="index.html">Home</a>
