--- a/posts.html
+++ b/posts.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
   </head>
 
-  <body  style="height:5000px; margin-top: 10vh;">
+  <body  style="height:5000px;">
     <section id="header">
       <!-- <a class="bigbutton" href="">Hello</a> -->
       <a class="navitem" href="index.html">Home</a>
@@ -19,7 +19,7 @@
       <a class="navitem" href="">Item 5</a>
     </section>
 
-    <section id="banner">
+    <section id="banner" class="downsized">
       <div class="banner-text"></div>
     </section>
 
