nil: transfer from devices

--- a/posts.html
+++ b/posts.html
@@ -23,6 +23,11 @@
       <div class="banner-text"></div>
     </section>
 
+    <section class="page-body">
+      <div class="page-body-header">
+        <h1>Posts</h1>
+      </div>
+    </section>
 
   </body>
 </html>
