added blu-rays into dymaic list

--- a/concerts.html
+++ b/concerts.html
@@ -47,6 +47,9 @@
                 
                 <h3>Love Live! Sunshine!! Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~</h3>
                 <p>Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~ is a concert held at 3 locations.</p>
+                <div class="support-buttons">
+                  <a href="">Support</a>
+                </div>
               </div>
 
             </div> -->
