--- a/members.html
+++ b/members.html
@@ -45,8 +45,8 @@
 
       <div id="scroll-buttons">
         <div id="scroll-buttons-container">
-          <img id="prev-button" src="Media/left-arrow.png">
-          <img id="next-button" src="Media/right-arrow.png">
+          <img id="prev-button" src="Media/icons/left-arrow.png">
+          <img id="next-button" src="Media/icons/right-arrow.png">
         </div>
       </div>
 
@@ -56,13 +56,22 @@
             <div class="member-inner-container">
 
               <div class="member-container-image">
-                <img id="0_image" src="Media/aqoursclub_cast_1.png" alt="Member 1">
+                <img id="0_image" src="Media/Amogus.jpg" alt="Member 1">
               </div>
 
               <div class="member-container-bio">
-                <h1 id="0_name" class="member-name">a</h1>
-                <p  id="0_birthday" class="member-birthday">A</p>
-                <p  id="0_biography" class="member-biography">2</p>
+                <h1 id="0_name" class="member-name">You shouldn't be seeing this</h1>
+                <p  id="0_birthday" class="member-birthday">You shouldn't be seeing this</p>
+                <p  id="0_biography" class="member-biography">You shouldn't be seeing this</p>
+                <div id="0_links" class="member-links"> 
+                  <a><img src="Media/Icons/instagram.png"></a>
+                  <a><img src="Media/Icons/twitter.png"></a>
+                  <a><img src="Media/Icons/link.png"></a>
+                  <div class="member-scroll-button-container">
+                    <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
+                    <img class="mobile-next-button" src="Media/icons/right-arrow.png">
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -73,13 +82,22 @@
           <div class="member-container">
             <div class="member-inner-container">
               <div class="member-container-image">
-                <img id="1_image" src="Media/aqoursclub_cast_2.png" alt="Member 2">
+                <img id="1_image" src="Media/Amogus.jpg" alt="Member 2">
               </div>
 
               <div class="member-container-bio">
-                <h1 id="1_name" class="member-name">a</h1>
-                <p id="1_birthday" class="member-birthday">A</p>
-                <p id="1_biography" class="member-biography">2</p>
+                <h1 id="1_name" class="member-name">You shouldn't be seeing this</h1>
+                <p id="1_birthday" class="member-birthday">You shouldn't be seeing this</p>
+                <p id="1_biography" class="member-biography">You shouldn't be seeing this</p>
+                <div id="1_links" class="member-links"> 
+                  <a><img src="Media/Icons/instagram.png"></a>
+                  <a><img src="Media/Icons/twitter.png"></a>
+                  <a><img src="Media/Icons/link.png"></a>
+                  <div class="member-scroll-button-container">
+                    <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
+                    <img class="mobile-next-button" src="Media/icons/right-arrow.png">
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -90,13 +108,22 @@
           <div class="member-container">
             <div class="member-inner-container">
               <div class="member-container-image">
-                <img id="2_image" src="Media/aqoursclub_cast_3.png" alt="Member 3">
+                <img id="2_image" src="Media/Amogus.jpg" alt="Member 3">
               </div>
 
               <div class="member-container-bio">
-                <h1 id="2_name" class="member-name">a</h1>
-                <p id="2_birthday" class="member-birthday">A</p>
-                <p id="2_biography" class="member-biography">2</p>
+                <h1 id="2_name" class="member-name">You shouldn't be seeing this</h1>
+                <p id="2_birthday" class="member-birthday">You shouldn't be seeing this</p>
+                <p id="2_biography" class="member-biography">You shouldn't be seeing this</p>
+                <div id="2_links" class="member-links"> 
+                  <a><img src="Media/Icons/instagram.png"></a>
+                  <a><img src="Media/Icons/twitter.png"></a>
+                  <a><img src="Media/Icons/link.png"></a>
+                  <div class="member-scroll-button-container">
+                    <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
+                    <img class="mobile-next-button" src="Media/icons/right-arrow.png">
+                  </div>
+                </div>
               </div>
             </div>
 
