social media links

--- a/members.html
+++ b/members.html
@@ -64,9 +64,9 @@
                 <p  id="0_birthday" class="member-birthday">You shouldn't be seeing this</p>
                 <p  id="0_biography" class="member-biography">You shouldn't be seeing this</p>
                 <div id="0_links" class="member-links"> 
-                  <a><img src="Media/Icons/instagram.png"></a>
-                  <a><img src="Media/Icons/twitter.png"></a>
-                  <a><img src="Media/Icons/link.png"></a>
+                  <a id="0_instagram"><img src="Media/Icons/instagram.png"></a>
+                  <a id="0_twitter"><img src="Media/Icons/twitter.png"></a>
+                  <a id="0_web"><img src="Media/Icons/link.png"></a>
                   <div class="member-scroll-button-container">
                     <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
                     <img class="mobile-next-button" src="Media/icons/right-arrow.png">
@@ -90,9 +90,9 @@
                 <p id="1_birthday" class="member-birthday">You shouldn't be seeing this</p>
                 <p id="1_biography" class="member-biography">You shouldn't be seeing this</p>
                 <div id="1_links" class="member-links"> 
-                  <a><img src="Media/Icons/instagram.png"></a>
-                  <a><img src="Media/Icons/twitter.png"></a>
-                  <a><img src="Media/Icons/link.png"></a>
+                  <a id="1_instagram"><img src="Media/Icons/instagram.png"></a>
+                  <a id="1_twitter"><img src="Media/Icons/twitter.png"></a>
+                  <a id="1_web"><img src="Media/Icons/link.png"></a>
                   <div class="member-scroll-button-container">
                     <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
                     <img class="mobile-next-button" src="Media/icons/right-arrow.png">
@@ -116,9 +116,9 @@
                 <p id="2_birthday" class="member-birthday">You shouldn't be seeing this</p>
                 <p id="2_biography" class="member-biography">You shouldn't be seeing this</p>
                 <div id="2_links" class="member-links"> 
-                  <a><img src="Media/Icons/instagram.png"></a>
-                  <a><img src="Media/Icons/twitter.png"></a>
-                  <a><img src="Media/Icons/link.png"></a>
+                  <a id="2_instagram"><img src="Media/Icons/instagram.png"></a>
+                  <a id="2_twitter"><img src="Media/Icons/twitter.png"></a>
+                  <a id="2_web"><img src="Media/Icons/link.png"></a>
                   <div class="member-scroll-button-container">
                     <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
                     <img class="mobile-next-button" src="Media/icons/right-arrow.png">
