dynamic gallery semi done

--- a/concerts.html
+++ b/concerts.html
@@ -52,7 +52,7 @@
                 <div class="gallery">
                   <div class="gallery-header flex">
                     <h3 class="gallery-title">Gallery</h3>
-                    <h3 class="gallery-show">[Show]</h3>
+                    <h3 class="gallery-button">[Show]</h3>
                   </div>
                   
 
