partially redid index.html

--- a/index.html
+++ b/index.html
@@ -20,26 +20,19 @@
     </section>
 
     <section id="banner">
-      <div class="banner-text">Amogus Translations</div>
+      <div class="banner-text text-center">Amogus Translations</div>
     </section>
 
-    <section id="team-info">
-      <div class="team-info-container">
-        <div class="team-info-logo">
-          <img src="Media/Amogus.jpg" alt="Amogus logo" />
+    <section id="team-information" class="flex-center">
+      <div class="team-info flex">
+        <div class="team-info-left flex">
+          <img src="Media/Amogus.jpg">
         </div>
 
-        <div class="team-info-text">
+        <div class="team-info-right text-center">
           <h1>Team Amogus</h1>
-          <p>
-            We are a team of LoveLive! Sunshine fans with the goal of
-            translating content to reach the worldwide audience!
-            <br />
-            We also aim to provide the latest news about LoveLive! franchise.
-          </p>
-          <div>
-            <a href="#">About the Team</a>
-          </div>
+          <p>We are a team</p>
+          <a href="team.html">Meet the team</a>
         </div>
       </div>
     </section>
