--- a/members.html
+++ b/members.html
@@ -15,7 +15,7 @@
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
       <a class="navitem" href="concerts.html">Concerts</a>
-      <a class="navitem" href="">Item 4</a>
+      <a class="navitem" href="team.html">Team</a>
       <a class="navitem" href="">Item 5</a>
     </section>
 
