--- a/team.html
+++ b/team.html
@@ -9,8 +9,8 @@
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
   </head>
 
-  <body style="height: 5000px">
-    <section id="header" class="canScroll">
+  <body style = height:5000px>
+    <section id="header">
       <!-- <a class="bigbutton" href="">Hello</a> -->
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
@@ -19,32 +19,20 @@
       <a class="navitem" href="">Item 5</a>
     </section>
 
-    <section id="banner">
-      <div class="banner-text text-center">Amogus Translations</div>
+    <section id="banner" class="team">
     </section>
 
-    <section id="team-information" class="flex-center">
-      <div class="team-info flex">
-        <div class="team-info-left flex">
-          <img id="team-logo" src="Media/Amogus.jpg">
+    <section id="team-container" class="flex-center">
+        <div class="team-member-inner flex" id="0_member">
+            <div class="team-member-left flex">
+                <img src="Media/Amogus.jpg">
+            </div>
+            <div class="team-member-right flex-center column">
+                <h1>Member 1</h1>
+                <p>Member 1 is a member</p>
+            </div>  
         </div>
-
-        <div class="team-info-right text-center">
-          <h1>Team Amogus</h1>
-          <p>We are a team</p>
-          <a href="team.html">Meet the team</a>
-        </div>
-      </div>
     </section>
-
-    <section id="newsfeed">
-      <div class="newsfeed-container">
-        <div class="newsfeed-section">a</div>
-
-        <div class="newsfeed-section">b</div>
-
-        <div class="newsfeed-section">c</div>
-      </div>
-    </section>
+    
   </body>
 </html>
