--- a/concerts.html
+++ b/concerts.html
@@ -15,11 +15,11 @@
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
       <a class="navitem" href="concerts.html">Concerts</a>
-      <a class="navitem" href="">Item 4</a>
+      <a class="navitem" href="team.html">Team</a>
       <a class="navitem" href="">Item 5</a>
     </section>
 
-    <section id="banner" class="downsized">
+    <section id="banner" class="concerts">
     </section>
 
     <section class="concerts-body">
