--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
 
   <body style="height: 5000px">
@@ -25,13 +28,17 @@
 
     <section id="team-information" class="flex-center">
       <div class="team-info flex">
-        <div class="team-info-left flex">
+        <div class="team-info-left flex-center">
           <img id="team-logo" src="Media/Amogus.jpg">
         </div>
 
-        <div class="team-info-right text-center">
-          <h1>Team Amogus</h1>
-          <p>We are a team</p>
+        <div class="team-info-right flex-center column">
+          <h1 class="nomargin">Team Amogus</h1>
+          <p>We are a team of Lovelive! Sunshine!! fans that aims to 
+            provide the latest news about the idol group Aqours and their activities.</p>
+          <p>Our goal as Team Amogus is for Lovelive! to reach a wider audience worldwide through
+            this website where we provide the latest news and information about Aqours.</p>
+          </p>
           <a href="team.html">Meet the team</a>
         </div>
       </div>
