--- a/concerts.html
+++ b/concerts.html
@@ -34,6 +34,33 @@
 
           <div class="concerts-body-main" id="123w123">
 
+            <!-- <div class="post flex column fw">
+              <h3 class="post-title nomargin">
+                Love Live! Sunshine!! Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~
+              </h3>
+              <div class="post-tags flex">
+                <div class="tag aqours-filter">Aqours</div>
+                <div class="tag live-filter">Live</div>
+              </div>
+              <div class="post-body flex column">
+                <div class="post-body-image">
+                  <img src="Media/concert_images/AQ_6TH.png">
+                </div>
+                  <h3>Love Live! Sunshine!! Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~</h3>
+                  <p>Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~ is a concert held at 3 locations.</p>
+                  <div class="gallery" id="gallery0">
+                    <div class="gallery-header flex nomargin" id="header0">
+                      <h3 class="gallery-title">Gallery</h3>
+                      <h3 class="gallery-button" id="0">[Show]</h3>
+                    </div></div>
+                    <h3>Official Links:</h3>
+                    <div class="support-buttons">
+                      <a href="https://www.lovelive-anime.jp/uranohoshi/sp_6thlive_w.php">Windy Stage</a>
+                      <a href="https://www.lovelive-anime.jp/uranohoshi/sp_6thlive.php">Sunny Stage</a>
+                      <a href="https://www.lovelive-anime.jp/uranohoshi/sp_6thlive.php">Ocean Stage</a>
+                    </div>
+                  </div>
+                </div> -->
 
           </div>
         
