--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
 
-  <body style="height: 5000px">
+  <body>
     <section id="header" class="canScroll">
       <!-- <a class="bigbutton" href="">Hello</a> -->
       <a class="navitem" href="index.html">Home</a>
@@ -23,29 +23,27 @@
     </section>
 
     <section id="banner">
-      <div class="banner-text text-center">Amogus Translations</div>
+      <div class="banner-text text-center">Team Amogus</div>
     </section>
 
-    <section id="team-information" class="flex-center">
-      <div class="team-info flex">
-        <div class="team-info-left flex-center">
+    <section id="team-advert" class="flex-center">
+
+      <div class="team-advert flex column">
+        <div class="team-advert-header flex-center">
+          <h1 class="nomargin ">Team Amogus</h1>
           <img id="team-logo" src="Media/Amogus.jpg">
         </div>
-
-        <div class="team-info-right flex-center column">
-          <h1 class="nomargin">Team Amogus</h1>
-          <p>We are a team of Lovelive! Sunshine!! fans that aims to 
+          <p class="">We are a team of Lovelive! Sunshine!! fans that aims to 
             provide the latest news about the idol group Aqours and their activities.</p>
-          <p>Our goal as Team Amogus is for Lovelive! to reach a wider audience worldwide through
+          <p class="">Our goal as Team Amogus is for Lovelive! to reach a wider audience worldwide through
             this website where we provide the latest news and information about Aqours.</p>
-          </p>
-          <a href="team.html">Meet the team</a>
+          <a id="meet-team" class="text-center" href="team.html">Meet the team ></a>
         </div>
       </div>
     </section>
 
-    <section id="newsfeed">
-      <div class="newsfeed-container">
+    <section id="members-advert flex">
+      <div class="members-advert-container">
         <div class="newsfeed-section">a</div>
 
         <div class="newsfeed-section">b</div>
