--- a/concerts.html
+++ b/concerts.html
@@ -22,8 +22,8 @@
     <section id="banner" class="concerts">
     </section>
 
-    <section class="concerts-body">
-      <div class="concerts-body-flexbox">
+    <section class="concerts-body fw">
+      <div class="concerts-body-flexbox flex-center column">
         <div class="concerts-body-section">
           <h1 class="concerts-body-main">Concerts</h1>
 
