--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
+    <script type="text/javascript" src="Scripts/members.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
 
-  <body>
+  <body style="height: 5000px">
     <section id="header" class="canScroll">
       <!-- <a class="bigbutton" href="">Hello</a> -->
       <a class="navitem" href="index.html">Home</a>
@@ -26,30 +27,49 @@
       <div class="banner-text text-center">Team Amogus</div>
     </section>
 
-    <section id="team-advert" class="flex-center">
+    <section id="team-advert-section" class="flex-center">
 
-      <div class="team-advert flex column">
-        <div class="team-advert-header flex-center">
+      <div class="advert flex column">
+        <div class="advert-header flex-center">
           <h1 class="nomargin ">Team Amogus</h1>
-          <img id="team-logo" src="Media/Amogus.jpg">
+          <img class="fh" id="team-logo" src="Media/Amogus.jpg">
         </div>
           <p class="">We are a team of Lovelive! Sunshine!! fans that aims to 
             provide the latest news about the idol group Aqours and their activities.</p>
           <p class="">Our goal as Team Amogus is for Lovelive! to reach a wider audience worldwide through
             this website where we provide the latest news and information about Aqours.</p>
-          <a id="meet-team" class="text-center" href="team.html">Meet the team ></a>
+          <a id="meet-team" class="text-center" href="team.html">Meet the team</a>
         </div>
       </div>
     </section>
 
-    <section id="members-advert flex">
-      <div class="members-advert-container">
-        <div class="newsfeed-section">a</div>
+    <section id="concert-advert-section" class="flex-center">
+      <div class="advert flex column">
+        <div class="flex">
+            <div class="advert flex column fw">
+              <h1 class="text-center nomargin">Featured Live Concert!</h1>
+              <h3 class="text-center">
+                Love Live! Sunshine!! Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~
+              </h3>
+              <div class="flex-center">
+                <div>
+                  <img class="fw fh" src="Media/AQ_6TH_FULL.jpg">
+                </div>
+                <div class="flex column fh">
+                  <p class="" id="concert-advert-text">
+                    Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~ is a concert held at 3 locations.
+                  </p>
+                  <a id="" class="text-center" href="concerts.html">Read More</a>
+                </div>
+               
+                
+              </div>
 
-        <div class="newsfeed-section">b</div>
-
-        <div class="newsfeed-section">c</div>
+          </div>
+        </div>
       </div>
-    </section>
+  </section>
+
+
   </body>
 </html>
