--- a/members.html
+++ b/members.html
@@ -53,7 +53,7 @@
       <div id ="slides">
 
         <div class="slide">
-          <div class="member-container flex-center">
+          <div class="member-container fw fh flex-center">
             <div class="member-inner-container flex-center">
 
               <div class="member-container-left">
@@ -85,7 +85,7 @@
         </div>
         
         <div class="slide">
-          <div class="member-container flex-center">
+          <div class="member-container fw fh flex-center">
             <div class="member-inner-container flex-center">
 
               <div class="member-container-left">
@@ -118,7 +118,7 @@
         </div>
         
         <div class="slide">
-          <div class="member-container flex-center">
+          <div class="member-container fw fh flex-center">
             <div class="member-inner-container flex-center">
 
               <div class="member-container-left">
