--- a/members.html
+++ b/members.html
@@ -158,6 +158,10 @@
       <button id="right-button"></button>
     </section>
 
+    <footer class="flex-center column">
+      <h3>Contact Us</h3>
+      <p>teamamogus@connect.np.edu.sg</p>
+    </footer>
 
   </body>
 </html>
