--- a/concerts.html
+++ b/concerts.html
@@ -78,6 +78,9 @@
     
     </section>
 
-    <footer>hello</footer>
+    <footer class="flex-center column">
+      <h3>Contact Us</h3>
+      <p>teamamogus@connect.np.edu.sg</p>
+    </footer>
   </body>
 </html>
