--- a/team.html
+++ b/team.html
@@ -24,48 +24,45 @@
 
     <section id="team-container" class="flex-center column">
 
-        <div class="team-member-inner flex" id="0_member">
+        <div class="team-member-inner fw flex-center">
             <div class="team-member-left flex">
-                <img class="fw fh"src="Media/Amogus.jpg">
+                <img class="team-member-image fw fh" src="Media/team-icons/cheeseburger.png">
             </div>
             <div class="team-member-right flex-center column">
-                <h1>Member 1</h1>
-                <p>Member 1 is a member</p>
+                <h1>Jing Xuan</h1>
+                <h4>Hi, I am Jing Xuan and I'm the team leader</h4>
             </div>  
         </div>
 
-        <div class="team-member-inner flex" id="1_member">
-          
+        <div class="team-member-inner fw flex-center">
           <div class="team-member-right flex-center column">
-              <h1>Member 1</h1>
-              <p>Member 1 is a member</p>
+              <h1>Jing Xuan 2</h1>
+              <h4>Hi, I am Jing Xuan 2 and I'm the website developer.</h4>
           </div>  
           <div class="team-member-left flex">
-            <img class="fw fh"src="Media/Amogus.jpg">
+            <img class="team-member-image fw fh" src="Media/team-icons/Filet-O-Fish.png">
           </div>
         </div>
 
-      <div class="team-member-inner flex" id="2_member">
-        <div class="team-member-left flex">
-            <img class="fw fh"src="Media/Amogus.jpg">
-        </div>
-        <div class="team-member-right flex-center column">
-            <h1>Member 1</h1>
-            <p>Member 1 is a member</p>
+        <div class="team-member-inner fw flex-center">
+          <div class="team-member-left flex">
+              <img class="team-member-image fw fh" src="Media/team-icons/Egg McMuffin.png">
+          </div>
+          <div class="team-member-right flex-center column">
+              <h1>Jing Xuan 3</h1>
+              <h4>Hi, I am Jing Xuan 3 and I worked with Jing Xuan 2 to create this website!</h4>
+          </div>  
         </div>  
-      </div>
 
-    <div class="team-member-inner flex" id="3_member">
-      
-      <div class="team-member-right flex-center column">
-          <h1>Member 1</h1>
-          <p>Member 1 is a member</p>
-      </div>  
-      <div class="team-member-left flex">
-        <img class="fw fh"src="Media/Amogus.jpg">
-      </div>
-    </div>
-
+        <div class="team-member-inner fw flex-center">
+          <div class="team-member-right flex-center column">
+              <h1>Jing Xuan 4</h1>
+              <h4>Hi, I am Jing Xuan 4 and I'm part of the QA team!</h4>
+          </div>  
+          <div class="team-member-left flex">
+            <img class="team-member-image fw fh" src="Media/team-icons/Sausage McMuffin.png">
+          </div>
+        </div>
 
     </section>
 
