--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
     </section>
 
-    <footer class="flex-center column">
+    <footer class="text-center">
         <h3>Contact Us</h3>
         <p>teamamogus@connect.np.edu.sg</p>
     </footer>
