--- a/members.html
+++ b/members.html
@@ -158,7 +158,7 @@
       <button id="right-button"></button>
     </section>
 
-    <footer class="flex-center column">
+    <footer class="text-center">
       <h3>Contact Us</h3>
       <p>teamamogus@connect.np.edu.sg</p>
     </footer>
