--- a/team.html
+++ b/team.html
@@ -66,10 +66,10 @@
 
     </section>
 
-    <footer class="flex-center column">
+    <footer class="text-center">
       <h3>Contact Us</h3>
       <p>teamamogus@connect.np.edu.sg</p>
     </footer>
-    
+
   </body>
 </html>
