normalize.css + minwidth  members

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Jing Xuan's ASG1</title>
+    <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
