--- a/members.html
+++ b/members.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Members</title>
+    <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -74,10 +75,10 @@
                   <a id="0_instagram"><img src="Media/Icons/instagram.png"></a>
                   <a id="0_twitter"><img src="Media/Icons/twitter.png"></a>
                   <a id="0_web"><img src="Media/Icons/link.png"></a>
-                  <div class="member-scroll-button-container">
+                  <!-- <div class="member-scroll-button-container">
                     <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
                     <img class="mobile-next-button" src="Media/icons/right-arrow.png">
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -106,10 +107,10 @@
                   <a id="1_instagram"><img src="Media/Icons/instagram.png"></a>
                   <a id="1_twitter"><img src="Media/Icons/twitter.png"></a>
                   <a id="1_web"><img src="Media/Icons/link.png"></a>
-                  <div class="member-scroll-button-container">
+                  <!-- <div class="member-scroll-button-container">
                     <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
                     <img class="mobile-next-button" src="Media/icons/right-arrow.png">
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -139,10 +140,10 @@
                   <a id="2_instagram"><img src="Media/Icons/instagram.png"></a>
                   <a id="2_twitter"><img src="Media/Icons/twitter.png"></a>
                   <a id="2_web"><img src="Media/Icons/link.png"></a>
-                  <div class="member-scroll-button-container">
+                  <!-- <div class="member-scroll-button-container">
                     <img class="mobile-prev-button" src="Media/icons/left-arrow.png">
                     <img class="mobile-next-button" src="Media/icons/right-arrow.png">
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
