mobile filter + sunnystage + cssedits

--- a/concerts.html
+++ b/concerts.html
@@ -27,10 +27,23 @@
       <div class="concerts-body-flexbox flex-center column">
         <div class="concerts-body-section">
           <h1 class="concerts-body-main">Concerts</h1>
-
+          <div class="concerts-body-middle" id="mobile-dropdown">
+            <img src="Media/Icons/hamburger.png">
+          </div>
           <h1 class="concerts-body-side">Filters</h1>
-       </div>
-      
+        </div>
+
+        <div class="concerts-body-section">
+          <div class="hidden flex-center column fw" id="mobile-dropdown-container">
+            <div class="filter-button" id="aqours-filter">Aqours</div>
+            <div class="filter-button" id="cyaron-filter">CYaRon!</div>
+            <div class="filter-button" id="guiltykiss-filter">Guilty Kiss</div>
+            <div class="filter-button" id="azalea-filter">AZALEA</div>
+            <div class="filter-button" id="live-filter">Live</div>
+            <div class="filter-button" id="online-filter">Online</div>
+          </div>
+        </div>
+
         <div class="concerts-body-section">
 
           <div class="concerts-body-main" id="123w123">
@@ -64,7 +77,6 @@
                 </div> -->
 
           </div>
-        
           <div class="concerts-body-side">
             <div class="filter-button text-center" id="aqours-filter">Aqours</div>
             <div class="filter-button text-center" id="cyaron-filter">CYaRon!</div>
