--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 
   <body>
     <section id="header" class="canScroll">
-      <!-- <a class="bigbutton" href="">Hello</a> -->
+      <div class="flex fw fh">
+        <img class="bigbutton" src="Media/Amogus.jpg">
+      </div>
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
       <a class="navitem" href="concerts.html">Concerts</a>
       <a class="navitem" href="team.html">Team</a>
-      <a class="navitem" href="">Item 5</a>
     </section>
 
     <section id="banner">
