--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
 
   <body>
-    <section id="header" class="canScroll">
+    <section id="header" class="canscroll">
       <div class="flex fw fh">
-        <img class="bigbutton" src="Media/Amogus.jpg">
+        <a class="logo" href="index.html"><img src="Media/Amogus.jpg"></a>
       </div>
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
