--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <section id="header" class="canscroll">
       <div class="flex fw fh">
-        <a class="logo" href="index.html"><img src="Media/Amogus.jpg"></a>
+        <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg"></a>
       </div>
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
