--- a/members.html
+++ b/members.html
@@ -13,7 +13,7 @@
   <body>
     <section id="header">
       <div class="flex fw fh">
-        <a class="logo" href="index.html"><img src="Media/Amogus.jpg"></a>
+        <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg"></a>
       </div>
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
