--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
         <div class="flex">
           <div class="flex column fw">
             <h1 class="text-center nomargin">Featured Live Concert!</h1>
-            <h3 class="text-center">
+            <h3 id="concert-advert-title" class="text-center">
               Love Live! Sunshine!! Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~
             </h3>
             <div class="concert-advert-left flex-center">
               <div>
-                <img class="fw fh" src="Media/AQ_6TH_FULL.jpg">
+                <img id="concert-advert-image" class="fw fh" src="Media/AQ_6TH_FULL.jpg">
               </div>
               <div class="concert-advert-right flex column fh">
                 <p class="" id="concert-advert-text">
