--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
-    <script type="text/javascript" src="Scripts/members.js" defer></script>
+    <script type="text/javascript" src="Scripts/random.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -53,8 +53,8 @@
               Love Live! Sunshine!! Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~
             </h3>
             <div class="concert-advert-left flex-center">
-              <div>
-                <img id="concert-advert-image" class="fw fh" src="Media/AQ_6TH_FULL.jpg">
+              <div> 
+                <img id="concert-advert-image" class="fw fh" src="Media/concert_images/AQ_6TH.png">
               </div>
               <div class="concert-advert-right flex column fh">
                 <p class="" id="concert-advert-text">
