--- a/members.html
+++ b/members.html
@@ -47,8 +47,8 @@
 
       <div id="scroll-buttons" class="flex">
         <div id="scroll-buttons-container" class="flex">
-          <img id="prev-button" src="Media/icons/left-arrow.png">
-          <img id="next-button" src="Media/icons/right-arrow.png">
+          <img id="prev-button" src="Media/icons/left_arrow.png">
+          <img id="next-button" src="Media/icons/right_arrow.png">
         </div>
       </div>
 
