--- a/members.html
+++ b/members.html
@@ -47,10 +47,10 @@
 
       <div id="scroll-buttons" class="flex">
         <div id="scroll-buttons-container" class="flex">
-          <!-- <img id="prev-button" src="Media/Icons/arrow1.png">
-          <img id="next-button" src="Media/Icons/arrow2.png"> -->
-          <h1 id="prev-button"><b><</b></h1>
-          <h1 id="next-button"><b>></b></h1>
+          <img id="prev-button" src="Media/Icons/arrow1.png">
+          <img id="next-button" src="Media/Icons/arrow2.png">
+          <!-- <h1 id="prev-button"><b><</b></h1>
+          <h1 id="next-button"><b>></b></h1> -->
         </div>
       </div>
 
