stylized entire website

--- a/team.html
+++ b/team.html
@@ -26,7 +26,7 @@
 
     <section id="team-container" class="flex-center column">
 
-        <div class="team-member-inner fw flex-center">
+        <div class="team-member-inner flex-center">
             <div class="team-member-left flex">
                 <img class="team-member-image fw fh" src="Media/team-icons/cheeseburger.png">
             </div>
@@ -36,7 +36,7 @@
             </div>  
         </div>
 
-        <div class="team-member-inner fw flex-center">
+        <div class="team-member-inner flex-center">
           <div class="team-member-right flex-center column">
               <h1>Jing Xuan 2</h1>
               <h4>Hi, I am Jing Xuan 2 and I'm the website developer.</h4>
@@ -46,7 +46,7 @@
           </div>
         </div>
 
-        <div class="team-member-inner fw flex-center">
+        <div class="team-member-inner flex-center">
           <div class="team-member-left flex">
               <img class="team-member-image fw fh" src="Media/team-icons/Egg McMuffin.png">
           </div>
@@ -56,7 +56,7 @@
           </div>  
         </div>  
 
-        <div class="team-member-inner fw flex-center">
+        <div class="team-member-inner flex-center">
           <div class="team-member-right flex-center column">
               <h1>Jing Xuan 4</h1>
               <h4>Hi, I am Jing Xuan 4 and I'm part of the QA team!</h4>
