--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
     <script type="text/javascript" src="Scripts/random.js" defer></script>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -16,7 +17,7 @@
 
   <body>
     <section id="header" class="canscroll">
-      <div class="flex fw fh">
+      <div class="logo-container flex fw fh">
         <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg"></a>
       </div>
       <a class="navitem" href="index.html">Home</a>
