--- a/members.html
+++ b/members.html
@@ -8,11 +8,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/members.js" defer></script>
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <section id="header">
-      <div class="flex fw fh">
+      <div class="logo-container flex fw fh">
         <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg"></a>
       </div>
       <a class="navitem" href="index.html">Home</a>
