--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Jing Xuan's ASG1</title>
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css" />
@@ -9,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="Scripts/scroll.js" defer></script>
     <script type="text/javascript" src="Scripts/random.js" defer></script>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
