--- a/team.html
+++ b/team.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Jing Xuan's ASG1</title>
     <link rel="stylesheet" href="normalize.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css" />
