--- a/concerts.html
+++ b/concerts.html
@@ -52,7 +52,7 @@
 
         <div class="concerts-body-section">
 
-          <div class="concerts-body-main" id="123w123">
+          <div class="concerts-body-main" id="concert_list">
 
             <!-- <div class="post flex column fw">
               <h3 class="post-title nomargin">
