image folder changes + Xd wireframe

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </h3>
                 <div class="concert-advert-left flex-center">
                   <div> 
-                    <img id="concert-advert-image" class="fw fh" src="Media/full/AQ_6TH.webp">
+                    <img id="concert-advert-image" class="fw fh" src="Media/concert_images/full/AQ_6TH.webp">
                   </div>
                   <div class="concert-advert-right flex column fh">
                     <p class="" id="concert-advert-text">
