--- a/members.html
+++ b/members.html
@@ -32,17 +32,17 @@
 
         <div class="members-group-section flex" id='cyaron'>
           <a class="subunit-buttons flex" href="javascript:changeSubunit(cyaron)">
-            <img class="subunit-image" src="Media/CYaRon_Logo.webp"></a>
+            <img class="subunit-image" src="Media/aqours_images/CYaRon_Logo.webp"></a>
         </div>
 
         <div class="members-group-section" id='guilty_kiss'>
           <a class="subunit-buttons flex" href="javascript:changeSubunit(guilty_kiss)">
-            <img class="subunit-image" src="Media/Guilty_Kiss_Logo.webp"></a>
+            <img class="subunit-image" src="Media/aqours_images/Guilty_Kiss_Logo.webp"></a>
         </div>
 
         <div class="members-group-section" id='azalea'>
           <a class="subunit-buttons flex" href="javascript:changeSubunit(azalea)">
-            <img class="subunit-image" src="Media/AZALEA_Logo.webp"></a>
+            <img class="subunit-image" src="Media/aqours_images/AZALEA_Logo.webp"></a>
         </div>
         
       </div>
