--- a/concerts.html
+++ b/concerts.html
@@ -53,7 +53,7 @@
         <div class="concerts-body-section">
 
           <div class="concerts-body-main" id="concert_list">
-
+            <!-- TEMPLATE -->
             <!-- <div class="post flex column fw">
               <h3 class="post-title nomargin">
                 Love Live! Sunshine!! Aqours 6th LoveLive! ~KU-RU-KU-RU Rock 'n' Roll TOUR~
