--- a/concerts.html
+++ b/concerts.html
@@ -18,7 +18,7 @@
   <body>
     <section id="header">
       <div class="logo-container flex fw fh">
-        <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg"></a>
+        <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg" alt="Team Logo"></a>
       </div>
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
@@ -34,7 +34,7 @@
         <div class="concerts-body-section">
           <h1 class="concerts-body-main">Concerts</h1>
           <div class="concerts-body-middle" id="mobile-dropdown">
-            <img src="Media/Icons/hamburger.png">
+            <img src="Media/Icons/hamburger.png" alt="Hamburger Icon">
           </div>
           <h1 class="concerts-body-side">Filters</h1>
         </div>
