--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <section id="header" class="canscroll">
       <div class="logo-container flex fw fh">
-        <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg"></a>
+        <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg" alt="Team Logo"></a>
       </div>
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
