--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
   <body>
     <section id="header">
       <div class="logo-container flex fw fh">
-        <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg"></a>
+        <a class="logo flex" href="index.html"><img src="Media/Amogus.jpg" alt="Team Logo"></a>
       </div>
       <a class="navitem" href="index.html">Home</a>
       <a class="navitem" href="members.html">Members</a>
@@ -33,7 +33,7 @@
 
         <div class="team-member-inner flex-center">
             <div class="team-member-left flex">
-                <img class="team-member-image fw fh" src="Media/team-icons/cheeseburger.png">
+                <img class="team-member-image fw fh" src="Media/team-icons/cheeseburger.png" alt="Team Member Logo">
             </div>
             <div class="team-member-right flex-center column">
                 <h1>Jing Xuan</h1>
@@ -47,13 +47,13 @@
               <h4>Hi, I am Jing Xuan 2 and I'm the website developer.</h4>
           </div>  
           <div class="team-member-left flex">
-            <img class="team-member-image fw fh" src="Media/team-icons/Filet-O-Fish.png">
+            <img class="team-member-image fw fh" src="Media/team-icons/Filet-O-Fish.png" alt="Team Member Logo">
           </div>
         </div>
 
         <div class="team-member-inner flex-center">
           <div class="team-member-left flex">
-              <img class="team-member-image fw fh" src="Media/team-icons/Egg McMuffin.png">
+              <img class="team-member-image fw fh" src="Media/team-icons/Egg McMuffin.png" alt="Team Member Logo">
           </div>
           <div class="team-member-right flex-center column">
               <h1>Jing Xuan 3</h1>
@@ -67,7 +67,7 @@
               <h4>Hi, I am Jing Xuan 4 and I'm part of the QA team!</h4>
           </div>  
           <div class="team-member-left flex">
-            <img class="team-member-image fw fh" src="Media/team-icons/Sausage McMuffin.png">
+            <img class="team-member-image fw fh" src="Media/team-icons/Sausage McMuffin.png" alt="Team Member Logo">
           </div>
         </div>
 
