-stray divs/remove file spaces

--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
 
         <div class="team-member-inner flex-center">
           <div class="team-member-left flex">
-              <img class="team-member-image fw fh" src="Media/team-icons/Egg McMuffin.png" alt="Team Member Logo">
+              <img class="team-member-image fw fh" src="Media/team-icons/EggMcMuffin.png" alt="Team Member Logo">
           </div>
           <div class="team-member-right flex-center column">
               <h1>Jing Xuan 3</h1>
@@ -67,7 +67,7 @@
               <h4>Hi, I am Jing Xuan 4 and I'm part of the QA team!</h4>
           </div>  
           <div class="team-member-left flex">
-            <img class="team-member-image fw fh" src="Media/team-icons/Sausage McMuffin.png" alt="Team Member Logo">
+            <img class="team-member-image fw fh" src="Media/team-icons/SausageMcMuffin.png" alt="Team Member Logo">
           </div>
         </div>
 
